UI improvements, shift now does view rotation, terrain tool falloff corrected

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -15,9 +15,6 @@ body {
 }
 #action-bar {
   display:block;
-  padding-bottom: 5px;
-  margin-bottom:5px;
-  border-bottom: 1px solid #99c;
 }
 
 #panel {
@@ -25,12 +22,10 @@ body {
   top:0;
   left:0;
   background: rgba(0,0,100,0.5);
-  padding: 10px;
-  border-bottom-right-radius: 10px;
+  padding: 2px;
+  border-bottom-right-radius: 3px;
 }
 #active-tool {
-  display:block;
-  width:100%;
 }
 #panel label {
   display:block;
@@ -41,7 +36,7 @@ body {
 #panel label span {
   font-size:80%;
   float:left;
-  padding-right:10px;
+  padding:2px 10px 0 5px;
   width: 60px;
 }
 #panel label input[type="range"] {
